--- a/src/input.css
+++ b/src/input.css
@@ -5,7 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer utilities {
 
     .cs-fs-badge {
@@ -586,109 +585,53 @@
         flex flex-row items-center px-2 pt-0.5 font-sans tracking-widest text-black uppercase bg-white border border-transparent rounded-xl cs-fs-badge;
     }
 
-}
+    /* #### AUTH FORMS #### */
 
-/* #### AUTH FORMS #### */
+    .cs-form-box {
+        @apply w-full max-w-[600px] shadow-cs-all-around rounded-3xl;
+    }
 
-.cs-form-box {
-    @apply
-        w-full 
-        max-w-[600px] 
-        shadow-cs-all-around 
-        rounded-3xl; 
-}
+    .cs-form-container {
+        @apply bg-cs-paper w-full rounded-b-3xl flex flex-col items-center pt-9 pb-12 px-6 sm:px-10
+        /* [param] padding towards input textboxes */
+    }
 
-.cs-form-container {
-    @apply
-    bg-cs-paper
-    w-full
-    rounded-b-3xl
-    flex
-    flex-col
-    items-center
-    pt-9
-    pb-12
-    px-6
-    sm:px-10  /* [param] padding towards input textboxes */
-}
+    .cs-form-box-success {
+        @apply w-full
+        /* [param] */
+        sm:w-[480px]
+        /* [param] */
+        md:w-[600px]
+        /* [param] */
+        shadow-cs-all-around
+        /* [param] */
+        rounded-3xl sm:mx-0 bg-cs-paper;
+    }
 
-.cs-form-box-success {
-    @apply
-    w-full /* [param] */
-    sm:w-[480px] /* [param] */
-    md:w-[600px] /* [param] */
-    shadow-cs-all-around /* [param] */
-    rounded-3xl
-    sm:mx-0
-    bg-cs-paper;
-}
+    .cs-form-container-success {
+        @apply w-auto rounded-3xl flex flex-col items-center pt-9 pb-12 px-6 sm:px-10
+        /* [param] padding between outer auth form and input textboxes */
+    }
 
-.cs-form-container-success {
-    @apply
-    w-auto
-    rounded-3xl
-    flex
-    flex-col
-    items-center
-    pt-9
-    pb-12
-    px-6
-    sm:px-10  /* [param] padding between outer auth form and input textboxes */
-}
+    .cs-form-login-header {
+        @apply font-serif uppercase cs-fs-lg tracking-[0.45rem] text-white bg-cs-red-main h-28 pt-12 w-full rounded-t-3xl;
+    }
 
-.cs-form-login-header {
-    @apply
-    font-serif
-    uppercase
-    cs-fs-lg
-    tracking-[0.45rem]
-    text-white
-    bg-cs-red-main
-    h-28
-    pt-12
-    w-full
-    rounded-t-3xl;
-}
+    .cs-form-header-bigger-letter {
+        @apply text-[35px];
+    }
 
-.cs-form-header-bigger-letter {
-    @apply text-[35px];
-}
+    .cs-form-header {
+        @apply font-serif uppercase cs-fs-lg sm:tracking-[0.30rem] tracking-wider text-cs-paper bg-cs-red-main flex flex-row items-baseline justify-center h-20 pt-4 w-full rounded-t-3xl;
+    }
 
-.cs-form-header {
-    @apply
-    font-serif
-    uppercase
-    cs-fs-lg
-    sm:tracking-[0.30rem]
-    tracking-wider
-    text-cs-paper
-    bg-cs-red-main
-    flex
-    flex-row
-    items-baseline
-    justify-center
-    h-20
-    pt-4
-    w-full
-    rounded-t-3xl;
-}
+    .cs-form-title {
+        @apply font-semibold cs-fs-xl text-left w-full mb-6 max-w-[450px] sm:max-w-full text-cs-red-main;
+    }
 
-.cs-form-title {
-    @apply
-    font-semibold
-    cs-fs-xl
-    text-left
-    w-full
-    mb-6
-    max-w-[450px]
-    sm:max-w-full
-    text-cs-red-main;
-}
-
-.cs-form-text {
-    @apply
-    w-full mb-6 text-left text-black cs-fs-sm;
-}
+    .cs-form-text {
+        @apply w-full mb-6 text-left text-black cs-fs-sm;
+    }
 
     .cs-form-text.cs-form-thank-you {
         @apply max-w-[450px];
@@ -699,17 +642,11 @@
     }
 
     .cs-form-label {
-        @apply
-        font-sans
-        uppercase
-        cs-fs-sm
-        tracking-widest
-        pl-1
+        @apply font-sans uppercase cs-fs-sm tracking-widest pl-1
     }
 
     .cs-form-input-container {
-        @apply
-        w-full mt-2 mb-8;
+        @apply w-full mt-2 mb-8;
     }
 
     .cs-form-input-container.cs-form-small-container {
@@ -717,30 +654,14 @@
     }
 
     .cs-form-input {
-        @apply
-        py-1.5
-        placeholder:text-cs-red-main/50
-        autofill:text-cs-red-main/50
-        autofill:cs-fs-xs
-        text-cs-red-main
-        font-semibold
-        cs-fs-xs
-        border-cs-red-main
-        border-2
-        rounded-l-3xl
-        rounded-r-xl
-        bg-cs-paper-shade
-        pl-4
-        w-full
-        md:w-full;
+        @apply py-1.5 placeholder:text-cs-red-main/50 autofill:text-cs-red-main/50 autofill:cs-fs-xs text-cs-red-main font-semibold cs-fs-xs border-cs-red-main border-2 rounded-l-3xl rounded-r-xl bg-cs-paper-shade pl-4 w-full md:w-full;
     }
 
     .cs-form-input.cs-form-input-icon {
         @apply sm:pl-12;
     }
 
-    .cs-form-input + img
-    {
+    .cs-form-input+img {
         @apply hidden sm:block absolute top-2.5 left-4 w-4 h-4;
     }
 
@@ -748,261 +669,137 @@
         @apply hidden;
     }
 
-.cs-password-eye.active .hs-password-active,
-.cs-password-eye .hs-password-deactive
-{
-    @apply block;
-}
-
-.cs-password-eye.active .hs-password-deactive,
-.cs-password-eye .hs-password-active {
-     @apply hidden;
-}
-
-.cs-form-submit {
-        @apply self-end
-        mt-6
-        font-sans
-        font-bold
-        uppercase
-        cs-fs-sm
-        tracking-wider
-        rounded-xl
-        bg-cs-red-main
-        text-white
-        py-1.5
-        px-4
-        border
-        border-transparent
-        text-center
-        transition-all
-        shadow-sm
-        hover:bg-cs-red-dark
-        disabled:pointer-events-none
-        disabled:opacity-50
-        disabled:shadow-none;
+    .cs-password-eye.active .hs-password-active,
+    .cs-password-eye .hs-password-deactive {
+        @apply block;
     }
 
-/* #### COURSE REGISTRATION FORMS #### */
+    .cs-password-eye.active .hs-password-deactive,
+    .cs-password-eye .hs-password-active {
+        @apply hidden;
+    }
 
-.cs-course-container {
-    @apply
-    bg-cs-paper
-    w-full
-    rounded-b-3xl
-    flex
-    flex-col
-    items-center
-    pt-9
-    pb-12
-    px-6
-    sm:px-10 /* [param] padding between outer auth form and input textboxes */;
+    .cs-form-submit {
+        @apply self-end mt-6 font-sans font-bold uppercase cs-fs-sm tracking-wider rounded-xl bg-cs-red-main text-white py-1.5 px-4 border border-transparent text-center transition-all shadow-sm hover:bg-cs-red-dark disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none;
+    }
+
+    /* #### COURSE REGISTRATION FORMS #### */
+
+    .cs-course-container {
+        @apply bg-cs-paper w-full rounded-b-3xl flex flex-col items-center pt-9 pb-12 px-6 sm:px-10
+        /* [param] padding between outer auth form and input textboxes */
+        ;
+    }
+
+    .cs-course-header {
+        @apply flex flex-row items-baseline justify-center w-full h-20 pt-6 font-sans font-semibold cs-fs-lg text-cs-paper bg-cs-red-dark sm:px-10 rounded-t-3xl;
+    }
+
+    .cs-course-input,
+    .cs-course-select {
+        @apply py-1.5 placeholder:text-cs-red-dark/50 text-cs-red-dark autofill:text-cs-red-dark/50 autofill:text-cs-red-dark autofill:cs-fs-xs font-semibold cs-fs-xs border-cs-red-dark border-2 rounded-l-3xl rounded-r-xl bg-cs-paper-shade pl-4 w-full;
+    }
+
+
+    .cs-course-input.cs-course-input-icon {
+        @apply sm:pl-12;
+    }
+
+    .cs-course-input+img {
+        @apply hidden sm:block absolute top-2.5 left-4 w-4 h-4;
+    }
+
+    .cs-course-select option {
+        @apply pl-2 text-left;
+    }
+
+    .cs-course-arrow {
+        @apply w-8 h-10 text-white rounded-r-lg bg-cs-red-dark sm:h-10;
+    }
+
+    .cs-course-phone-prefix {
+        @apply py-1.5 placeholder:text-cs-red-dark text-cs-red-dark font-semibold cs-fs-xs border-cs-red-dark border-2 rounded-l-3xl rounded-r-xl w-full min-w-[150px] bg-cs-paper-shade pl-10;
+    }
+
+    .cs-course-phone-number {
+        @apply py-1.5 placeholder:text-cs-red-dark text-cs-red-dark font-semibold cs-fs-xs border-cs-red-dark border-2 rounded-xl bg-cs-paper-shade w-full pl-4 md:pl-4
+    }
+
+    .cs-course-checkbox {
+        @apply w-4 h-4 bg-white border rounded-md text-cs-red-dark border-cs-red-dark;
+    }
+
+    .cs-course-checkbox-label {
+        @apply font-bold tracking-wider text-black uppercase ms-2 cs-fs-sm;
+    }
+
+    .cs-course-accordion-button {
+        @apply px-5 py-2 mt-4 uppercase rounded-3xl bg-cs-paper-dark text-cs-red-dark;
+    }
+
+    .cs-course-accordion-content {
+        @apply px-3 pt-3 pb-5 text-sm text-black bg-cs-paper cs-fs-sm;
+    }
+
+    .cs-course-submit {
+        @apply self-end mt-8 font-sans font-bold uppercase cs-fs-sm tracking-wider rounded-xl bg-cs-red-main text-white py-1.5 px-4 border border-transparent text-center transition-all shadow-sm hover:bg-cs-red-dark disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none;
+    }
+
+    .cs-course-reset {
+        @apply self-end mt-8 font-sans font-bold uppercase cs-fs-sm tracking-wider bg-cs-paper-shade rounded-xl border-cs-red-main text-cs-red-main py-1.5 px-4 border-2 bg-transparent text-center transition-all shadow-sm hover:bg-cs-red-dark hover:border-cs-red-dark hover:text-white disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none;
+    }
+
+    /* #### USER PERSONAL AREA #### */
+    .cs-personal-area-container {
+        @apply px-5 sm:px-8 max-w-[800px]
+        /* [param] */
+        rounded-3xl;
+    }
+
+    .cs-accordion-manager {
+        @apply w-full h-10 gap-2 mt-8 mb-8;
+    }
+
+    .cs-personal-area-box {
+        @apply mb-16 w-full
+        /* [param] */
+        shadow-cs-all-around
+        /* [param] */
+        rounded-3xl bg-cs-blue-main
+    }
+
+
+    .cs-personal-accordion-header {
+        @apply gap-4 pt-1 pr-5 my-4 font-semibold text-left text-white cs-fs-lg pl-9;
+    }
+
+    .cs-personal-accordion-content {
+        @apply gap-4 px-8 py-5 cs-fs-base text-cs-grey bg-cs-paper-dark rounded-b-[1.44rem];
+        /* MI: It shoud be rounded-b-3xl, but a tiny blue from the underlying element would appear in the curvature! Hence this fix. */
+    }
+
+    /** BIBLE COURSE AREA **/
+
+    .cs-bible-area-box {
+        @apply mb-16 w-full
+        /* [param] */
+        shadow-cs-all-around
+        /* [param] */
+        rounded-3xl bg-cs-paper-dark;
+    }
+
+    .cs-bible-accordion-header {
+        @apply gap-4 pt-1 pl-4 pr-5 my-4 font-semibold text-left text-black cs-fs-lg sm:pl-9;
+    }
+
+
+    .cs-bible-accordion-subtitle {
+        @apply gap-2 px-4 py-4 font-serif font-semibold tracking-widest uppercase cs-fs-base sm:px-8;
+    }
+
+    .cs-bible-accordion-content {
+        @apply gap-6 px-4 py-6 font-semibold cs-fs-sm md:px-8 text-cs-grey bg-cs-paper-dark cs-fs-base rounded-b-3xl;
+    }
+
 }
 
-.cs-course-header {
-    @apply
-    flex flex-row items-baseline justify-center w-full h-20 pt-6 font-sans font-semibold cs-fs-lg text-cs-paper bg-cs-red-dark sm:px-10 rounded-t-3xl;
-}
-
-.cs-course-input,
-.cs-course-select {
-    @apply
-    py-1.5
-    placeholder:text-cs-red-dark/50
-    text-cs-red-dark
-    autofill:text-cs-red-dark/50
-    autofill:text-cs-red-dark
-    autofill:cs-fs-xs
-    font-semibold
-    cs-fs-xs
-    border-cs-red-dark
-    border-2
-    rounded-l-3xl
-    rounded-r-xl
-    bg-cs-paper-shade
-    pl-4
-    w-full;
-}
-
-
-.cs-course-input.cs-course-input-icon {
-    @apply sm:pl-12;
-}
-
-.cs-course-input + img
-{
-    @apply hidden sm:block absolute top-2.5 left-4 w-4 h-4;
-}
-
-.cs-course-select option {
-    @apply pl-2 text-left;
-}
-
-.cs-course-arrow {
-    @apply w-8 h-10 text-white rounded-r-lg bg-cs-red-dark sm:h-10;
-}
-
-.cs-course-phone-prefix {
-    @apply
-    py-1.5
-    placeholder:text-cs-red-dark
-    text-cs-red-dark
-    font-semibold
-    cs-fs-xs
-    border-cs-red-dark
-    border-2
-    rounded-l-3xl
-    rounded-r-xl
-    w-full
-    min-w-[150px]
-    bg-cs-paper-shade
-    pl-10;
-}
-.cs-course-phone-number {
-    @apply
-    py-1.5
-    placeholder:text-cs-red-dark
-    text-cs-red-dark
-    font-semibold
-    cs-fs-xs
-    border-cs-red-dark
-    border-2
-    rounded-xl
-    bg-cs-paper-shade
-    w-full
-    pl-4
-    md:pl-4
-}
-
-.cs-course-checkbox {
-    @apply
-    w-4 h-4 bg-white border rounded-md text-cs-red-dark border-cs-red-dark;
-}
-
-.cs-course-checkbox-label {
-    @apply
-    font-bold tracking-wider text-black uppercase ms-2 cs-fs-sm;
-}
-
-.cs-course-accordion-button {
-    @apply
-    px-5 py-2 mt-4 uppercase rounded-3xl bg-cs-paper-dark text-cs-red-dark;
-}
-
-.cs-course-accordion-content {
-    @apply
-    px-3 pt-3 pb-5 text-sm text-black bg-cs-paper cs-fs-sm;
-}
-
-.cs-course-submit {
-    @apply self-end
-    mt-8
-    font-sans
-    font-bold
-    uppercase
-    cs-fs-sm
-    tracking-wider
-    rounded-xl
-    bg-cs-red-main
-    text-white
-    py-1.5
-    px-4
-    border
-    border-transparent
-    text-center
-    transition-all
-    shadow-sm
-    hover:bg-cs-red-dark
-    disabled:pointer-events-none
-    disabled:opacity-50
-    disabled:shadow-none;
-}
-
-.cs-course-reset {
-    @apply self-end
-    mt-8
-    font-sans
-    font-bold
-    uppercase
-    cs-fs-sm
-    tracking-wider
-    bg-cs-paper-shade
-    rounded-xl
-    border-cs-red-main
-    text-cs-red-main
-    py-1.5
-    px-4
-    border-2
-    bg-transparent
-    text-center
-    transition-all
-    shadow-sm
-    hover:bg-cs-red-dark
-    hover:border-cs-red-dark
-    hover:text-white
-    disabled:pointer-events-none
-    disabled:opacity-50
-    disabled:shadow-none;
-}
-
-/* #### USER PERSONAL AREA #### */
-.cs-personal-area-container {
-    @apply
-    px-5
-    sm:px-8
-    max-w-[800px] /* [param] */
-    rounded-3xl;
-}
-
-.cs-accordion-manager {
-    @apply
-    w-full h-10 gap-2 mt-8 mb-8;
-}
-
-.cs-personal-area-box {
-    @apply
-    mb-16
-    w-full /* [param] */ 
-    shadow-cs-all-around /* [param] */
-    rounded-3xl
-    bg-cs-blue-main
-}
-
-
-.cs-personal-accordion-header {
-    @apply
-    gap-4 pt-1 pr-5 my-4 font-semibold text-left text-white cs-fs-lg pl-9;
-}
-
-.cs-personal-accordion-content {
-    @apply
-    gap-4 px-8 py-5 cs-fs-base text-cs-grey bg-cs-paper-dark rounded-b-[1.44rem];
-    /* MI: It shoud be rounded-b-3xl, but a tiny blue from the underlying element would appear in the curvature! Hence this fix. */
-}
-
-/** BIBLE COURSE AREA **/
-
-.cs-bible-area-box {
-    @apply
-    mb-16
-    w-full /* [param] */
-    shadow-cs-all-around /* [param] */
-    rounded-3xl
-  bg-cs-paper-dark;
-}
-
-.cs-bible-accordion-header {
-    @apply
-    gap-4 pt-1 pl-4 pr-5 my-4 font-semibold text-left text-black cs-fs-lg sm:pl-9;
-}
-
-
-.cs-bible-accordion-subtitle {
-    @apply
-    gap-2 px-4 py-4 font-serif font-semibold tracking-widest uppercase cs-fs-base sm:px-8;
-}
-
-.cs-bible-accordion-content {
-    @apply
-    gap-6 px-4 py-6 font-semibold cs-fs-sm md:px-8 text-cs-grey bg-cs-paper-dark cs-fs-base rounded-b-3xl;
-}
