feat: push changes in testimonials.php

--- a/src/input.css
+++ b/src/input.css
@@ -809,6 +809,7 @@
     placeholder:text-cs-red-main
     text-cs-red-main
     text-left
+    max-sm:w-full
     autofill:text-cs-red-main
     autofill:cs-fs-3xs
     font-semibold
