--- a/src/input.css
+++ b/src/input.css
@@ -46,6 +46,7 @@
 }
 
 @layer components {
+
     .cs-main {
      @apply 
      mt-24 pb-44   /* [param] sets margins for <main> element.
@@ -200,6 +201,7 @@
         @apply
             absolute
             hidden
+            z-20
             mt-6 /* [param] distance of Level 2 box of public menu items from the reative level 1 word (desktop) */
             uppercase
             origin-top
