fv: about-us page

--- a/src/input.css
+++ b/src/input.css
@@ -936,6 +936,21 @@
         @apply self-end font-sans font-bold uppercase cs-fs-sm tracking-wider rounded-md text-white py-1.5 px-2 border border-transparent text-center transition-all shadow-sm disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none;
     }
 
+    .cs-about-us-bio {
+        @apply grid grid-cols-1 md:grid-cols-2 gap-4;
+    }
+
+    .cs-about-us-grid {
+        @apply grid grid-cols-1 md:grid-cols-2 gap-6 md:px-0 px-6;
+    }
+    .cs-about-us-grid-item {
+        @apply flex flex-col items-center border-b-8 border-cs-red-medium gap-4 min-h-96 justify-evenly my-4;
+    }
+
+    .cs-about-us-grid-item-icon {
+        @apply w-20 h-20;
+    }
+
     /* #### BG VANILLA CSS #### */
     .cs-bg-login {
         background-repeat: no-repeat;
@@ -974,7 +989,7 @@
     }
 
     .cs-bg-about-us-rabbi {
-        background-image: url('/src/assets/mauro-janet-lake.jpg');
+        background-image: url('/src/assets/about-us-welcoming.png');
         background-position: top;
         background-size: cover;
     }
