--- a/src/input.css
+++ b/src/input.css
@@ -58,13 +58,11 @@
      mt-24 pb-44   /* [param] sets margins for <main> element.
     It depends if we want the navbar non-sticky or sticky <header class="md:relative"> or not - if we have, the navbar would scroll from md (instead of being fixed like in mobile) - and I have to readjust mt and mb accordingly here.
     */
-    bg-cs-paper-shade
+    bg-cs-paper
     }
     .cs-main-div {
         @apply
-        flex
-        flex-col
-        items-center;
+        flex flex-col items-center;
     }
     /* whole navbar features (desktop & mobile) */
     .cs-header {
@@ -937,14 +935,14 @@
     }
 
     .cs-about-us-bio {
-        @apply grid grid-cols-1 md:grid-cols-2 gap-4;
+        @apply grid grid-cols-1 gap-4 md:grid-cols-2;
     }
 
     .cs-about-us-grid {
-        @apply grid grid-cols-1 md:grid-cols-2 gap-6 md:px-0 px-6;
+        @apply grid grid-cols-1 gap-6 px-6 md:grid-cols-2 md:px-0;
     }
     .cs-about-us-grid-item {
-        @apply flex flex-col items-center border-b-8 border-cs-red-medium gap-4 min-h-96 justify-evenly my-4;
+        @apply flex flex-col items-center gap-4 my-4 border-b-8 border-cs-red-medium min-h-96 justify-evenly;
     }
 
     .cs-about-us-grid-item-icon {
