--- a/src/input.css
+++ b/src/input.css
@@ -877,11 +877,11 @@
     }
 
     .cs-testimonials-box-author {
-        @apply cs-fs-lg text-white h-20 pt-2 w-full rounded-t-[13px];
+        @apply cs-fs-lg text-white h-20 w-full rounded-t-[13px];
     }
 
     .cs-testimonials-counter {
-        @apply font-sans min-w-[75px] py-1 h-auto rounded-[20px] bg-cs-paper border-4 cs-fs-3xs font-bold text-center;
+        @apply font-sans min-w-[60px] py-1 h-auto rounded-[20px] bg-cs-paper border-4 cs-fs-3xs font-bold text-center;
     }
 
     .cs-become-student {
