--- a/src/input.css
+++ b/src/input.css
@@ -955,7 +955,7 @@
     }
 
     /* #### BG VANILLA CSS #### */
-    .cs-bg-login {
+    .cs-login {
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
