--- a/src/input.css
+++ b/src/input.css
@@ -66,7 +66,7 @@
     }
     .cs-main-div {
         @apply
-        flex flex-col items-center;
+        flex flex-col items-center w-full;
     }
     /* whole navbar features (desktop & mobile) */
     .cs-header {
