--- a/src/input.css
+++ b/src/input.css
@@ -538,7 +538,7 @@
         transition: all 300ms cubic-bezier(0, 0.77, 0.58, 1);
     }
 
-    .cs-sidebar ul li a.active {
+    .cs-sidebar ul li a.cs-active {
         background: #1f2937;
         background-color: #1f2937;
     }
@@ -699,12 +699,12 @@
         @apply hidden;
     }
 
-    .cs-password-eye.active .hs-password-active,
+    .cs-password-eye.cs-active .hs-password-active,
     .cs-password-eye .hs-password-deactive {
         @apply block;
     }
 
-    .cs-password-eye.active .hs-password-deactive,
+    .cs-password-eye.cs-active .hs-password-deactive,
     .cs-password-eye .hs-password-active {
         @apply hidden;
     }
